--- a/src/README
+++ b/src/README
@@ -1,4 +1,4 @@
-// <hjForm fields=['位置名称',
+// <fbdForm fields=['位置名称',
 //     '页面名称',
 //     '平台',
 //     {
@@ -39,7 +39,7 @@
 //             richTextField: 'MC & APP内容'
 //         }]
 //     }] actions = { FormActionType.submit | FormActionType.close } >
-// </hjForm>
+// </fbdForm>
 
 // 怎么用最简洁的方式显示一个列表页？
 
@@ -72,7 +72,7 @@ UI和触发动作
 
 对于表单 
 - 页面级
-<hjForm fields=['位置名称', 
+<fbdForm fields=['位置名称', 
     '页面名称', 
     '平台', 
     {
@@ -114,7 +114,7 @@ UI和触发动作
         }]
     }] actions={FormActionType.submit|FormActionType.close}>
     
-</hjForm>
+</fbdForm>
 
 field-type
 
